GNU parted NEWS                                    -*- outline -*-

* Noteworthy changes in release ?.? (????-??-??) [?]

** Bug Fixes

  Fix fat resize to preverve boot code, and thus not render the
  filesystem unreconized by Windows.

  Fix rescue command: the rescue command often failed to find
  filesystems due to leaving on cylinder alignment.

  libparted-fs-resize: Prevent crash resizing FAT file systems with very
  deep directories with path names over 512 bytes long.

  Use 512b sector size when communicating with device-mapper. Fixes
  problems with partitions being created too small on dm devices
  with sector sizes > 5121b

  Don't crash in the disk_set command when a disk label is not found

  libparted-fs-resize: Prevent crash resizing FAT16 file systems.

  libparted-fs-resize: Prevent crash resizing FAT16 file systems.

* Noteworthy changes in release 3.2 (2014-07-28) [stable]

** New Features

  Add resizepart command to resize a partition.  This works even on
  mounted partitions.

  Add support for EAV DASD partitions, which are ECKD's with more than
  65520 cylinders.

  Add support for implicit FBA DASD partitions with a single immutable
  partition.

  Added support for recognizing btrfs filesystem. This simply displays
  btrfs in the 'file system' column of the parted output.

  Added new partition type flag, esp, to set the type to 0xEF on MS-DOS.
  Also aliased to boot on GPT to set the UEFI ESP GUID.

  Added new partition type flag, irst, for use with Intel Rapid Start
  Technology. On MS-DOS disk labels it sets the type to 0x84 and on GPT
  it sets the GUID to D3BFE2DE-3DAF-11DF-BA-40-E3A556D89593.

  You can now choose to ignore errors about partitions that overlap,
  or are longer than the disk.  This allows you to use parted to
  repair the problem.

  Add support for prep flag to GPT to select PowerPC Reference Platform
  boot partition type.

** Bug Fixes

  libparted: fix mac partition tables on > 512 byte sector sizes
