@@ -1,5 +1,7 @@
 GNU parted NEWS                                    -*- outline -*-
 
+  Parted now recognizes NVMe devices
+
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
 ** Bug Fixes
